# tenrek

./: .gitignore  LICENSE  README.md  bla.cpp  parser.py  pyproject.toml
LaTex_reports/intro/: intro.fdb_latexmk  intro.fls  intro.tex
LaTex_reports/rep_01/: BabinskayaAI-yptp-2026spring-1report.aux  BabinskayaAI-yptp-2026spring-1report.fdb_latexmk  BabinskayaAI-yptp-2026spring-1report.fls  BabinskayaAI-yptp-2026spring-1report.out  BabinskayaAI-yptp-2026spring-1report.tex  BabinskayaAI-yptp-2026spring-1report.toc
LaTex_reports/task/: task.fdb_latexmk  task.fls  task.tex
extended_version/: analyzer.py  generated_tests.cpp  generator.py  level1.cpp  main.py  parser.py
mvp/: cpp_template.py  main.py  mvp_generator.py  mvp_parser.py
project/: analyzer.py  main.py  output.json  output.txt  parser.py  test_file.cpp
project/metrics/: cyclomatic.py  loc.py  nesting.py
project/metrics/halstead/: halstead_all_elements.py  halstead_difficulty.py  halstead_effort.py  halstead_operands.py  (+4 more)
pytests/: README.md
pytests/tests/: test_cli_product.py  test_evaluator_product.py  test_metrics_product.py
tenrek/: analyzer.py  arc.txt  cli.py  evaluator.py  folder_parser.py  parser.py
tenrek/metrics/: average_string_length.py  dependency.py  file_dependency.py
test_big_ed/: 01_simple_green.cpp  02_cyclomatic_yellow_red.cpp  03_deep_nesting.cpp  04_long_lines.cpp  05_god_class.cpp  06_lcom_candidate.cpp  07_methods_and_args.cpp  08_exclude_me.cpp  README.md
test_folder/: main.cpp
tests/: test_class.cpp  test_file.cpp
tests/test_folder/: discount_calc.h
(+13 files in other folders)
