[project]
name = "tenrek"
version = "0.1.0"
description = "code complexity analizer tool"
authors = [
    {name = "Arina Babinskya",email = "rianawilson94@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
tenrek = "tenrek.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

