[project]
name = "tenrek"
version = "0.1.0"
description = "code complexity analyzer tool"
authors = [
    {name = "Arina Babinskya",email = "rianawilson94@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "clang>=16.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/arina-babinskaya"
Repository = "https://github.com/arina-babinskaya/tenrek"

[project.scripts]
tenrek = "tenrek.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

